# structured-output-court-rulings

./: .env.template  .gitignore  README.md  batch_extract.py  extract_with_api_calls.py  prompts.py  pyproject.toml  schema.py  utils.py
scripts/: download_by_timestamp.py  download_results.py
